--- a/Resources/views/CRUD/show_field_emails_list.html.twig
+++ b/Resources/views/CRUD/show_field_emails_list.html.twig
@@ -1,11 +1,11 @@
 <td>
-{% if sonata_block_exists('librinfo.email.block.emails_list') %}
-    {{ sonata_block_render({'type': 'librinfo.email.block.emails_list'}, {'target_entity': object}) }}
+{% if sonata_block_exists('sil.email.block.emails_list') %}
+    {{ sonata_block_render({'type': 'sil.email.block.emails_list'}, {'target_entity': object}) }}
 {% endif %}
 
 {% block send_new_email %}
     {% if object.email %}
-        <form method="GET" action="{{ path('admin_librinfo_email_email_create') }}" id='send-email-form'>
+        <form method="GET" action="{{ path('admin_sil_email_email_create') }}" id='send-email-form'>
             <label>Envoyer un email à {{ object.email }}</label>
             <input type="hidden" name="force_user" value="1">
             <input type="hidden" name="recipient_class" value="{{ admin.class }}">
