[Sil] [Email] Update translation for email templates

--- a/Resources/views/CRUD/email_edit.html.twig
+++ b/Resources/views/CRUD/email_edit.html.twig
@@ -5,7 +5,7 @@
 {% block sonata_form_actions %}
     {{ parent() }}
     {% if admin.id(object) is not null %}
-        {% if not object.sent %}
+        {% if object.sent is defined and not object.sent %}
             <a class="btn btn-info" href="{{ admin.generateObjectUrl('send', object) }}" type="submit"><i class="fa fa-paper-plane"></i> {{ 'Send'|trans({}, 'SilEmailBundle') }}</a>
         {% endif %}
         <a class="btn btn-info" href="{{ admin.generateObjectUrl('duplicate', object) }}"><i class="fa fa-files-o"></i> {{ 'Duplicate'|trans({}, 'SilEmailBundle') }}</a>
